--- a/index.html
+++ b/index.html
@@ -1,9 +1,25 @@
 <html>
-	<head>
-		<title>Meu Primeiro Site</title>
-	</head>
-	
-	<body>
-	
-	</body>
+<head>
+    <meta charset="UTF-8" />
+    <title>Meu Primeiro Site</title>
+    <link rel="stylesheet" type="text/css" href="estilo.css" />
+</head>
+<body>
+    <div class="topo" >
+        <div class="topointerior">
+            <div class="logomarca">
+                Logomarca
+            </div>
+            <div class="menu">
+                <ul>
+                    <li>HOME</li>
+                    <li>SOBRE</li>
+                    <li>NOTÍCIAS</li>
+                    <li>PRODUTOS</li>
+                    <li>CONTATO</li>
+                </ul>
+            </div>
+        </div>
+    </div>
+</body>
 </html>
