--- a/index.html
+++ b/index.html
@@ -21,5 +21,15 @@
             </div>
         </div>
     </div>
+    <div class="banner">
+    	<div class="bannerinterior">
+    		<div class="banneresquerda">
+    			
+    		</div>
+    		<div class="bannerdireita">
+    			<img src="homem.png"/>
+    		</div>
+    	</div>
+    </div>
 </body>
 </html>
