Layout pronto do site

--- a/index.html
+++ b/index.html
@@ -24,12 +24,36 @@
     <div class="banner">
     	<div class="bannerinterior">
     		<div class="banneresquerda">
-    			
+    			<div class="frase1">
+    				Frase de efeito
+    			</div>
+    			<div class="frase2">
+    				Outras frases que complementam a frase</br>de efeito
+    			</div>
+    			<div class="botao">
+    				Acessar o Produto
+    			</div>
     		</div>
     		<div class="bannerdireita">
     			<img src="homem.png"/>
     		</div>
     	</div>
+    </div>
+    <div class="conteudo">
+    	<div class="conteudointerno">
+    		<div class="outrosprodutos">
+    			Outros Produtos
+    		</div>
+    		<div class="fotos">
+    			<img src="banner1.jpg">
+    			<img src="banner2.jpg">
+    			<img src="banner3.jpg">
+    			<img src="banner4.jpg">
+    		</div>
+    	</div>
+    </div>
+    <div class="rodape">
+    	Sua Empresa
     </div>
 </body>
 </html>
